TaskList Component Definition

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-	<title></title>
+	<title>React Tutorial</title>
 </head>
 
 <body>
 	<div class="root"></div>
-	<script src="index.js"></script>
 </body>
 
 </html>
